update InMemoryFileSystem.java